<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titleStatusUpdate">Status Update</string>
    <string name="hintStatus">Please enter your status message</string>
    <string name="buttonUpdate">Update</string>
    <string name="msgStatusUpdatedSuccess">Status Updated Successfully</string>
    <string name="msgStatusUpdatedFail">Status Update Failed</string>
    <string name="username">Username</string>
    <string name="usernameSummary">Please enter your login username</string>
    <string name="password">password</string>
    <string name="passwordSummary">Please enter your password</string>
    <string name="server">server</string>
    <string name="serverSummary">Enter the server API</string>
    <string name="perfTitle">Preferences</string>
    <string name="msgPostingTweet">Please wait while posting...</string>
    <string name="titleServiceStart">Start Service</string>
    <string name="titleStopService">Stop Service</string>
    <string name="titlePurge">Purge</string>
    <string name="msgPurge">All Data Purged..</string>
    <string name="titleTimeline">Timeline</string>
    <string name="msgSetupPrefs">Please set up the preferences</string>
    <string name="startOnBoot">Start on boot</string>
    <string name="startOnBootSummary">Start the app on boot</string>
</resources>