<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/itemPrefs"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/perfTitle">
    </item>
    <item
        android:id="@+id/itemStatus"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/titleStatusUpdate">
    </item>
    
    <item
        android:id="@+id/itemToggleService"
        android:title="@string/titleServiceStart">
    </item>
    
    <!--
    <item
        android:id="@+id/itemServiceStart"
        android:title="@string/titleServiceStart">
    </item>
    <item
        android:id="@+id/itemServiceStop"
        android:title="@string/titleStopService">
    </item>
    -->
    <item
        android:id="@+id/itemTimeline"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/titleTimeline">
    </item>
    <item
        android:id="@+id/itemPurge"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/titlePurge">
    </item>

</menu>