<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StatusActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titleStatusUpdate"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editStatus"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hintStatus"
        android:inputType="textEmailAddress"
        android:textSize="15sp" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonUpdate"
        android:textSize="25sp" />

</LinearLayout>